--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /[Bb]uilds/
 /DevBuild_Data/
 /Assets/AssetStoreTools*
+/Assets/CSV/
 
 # Visual Studio 2015 cache directory
 /.vs/
@@ -33,3 +34,4 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+
